# api-project-page

./: .gitignore  README.md  app.py  audio_classifier.py  important notes.txt  index.html  pipeline.py  plagiarism_detection.py  pyproject.toml  remove_huggingface.py  requirements.txt  speech_recognizer.py  text_analyzer.py  whisper_script.py
ai_plagiarism_experiment/: res_metrics(t=0.97).csv
ai_plagiarism_testing/ai_plagiarism_experiment/: ai_plagiarism_detection_results.csv  res_metrics(t=0.5).csv  res_metrics(t=0.78).csv
audio_classification/: model.py
audio_classification_training/: spectrogram.py
json_folder/: ML_commons.json  README_FOR_MISSING_JSON.md.md  gpt_generated.json
models/: README.md
pipeline/: pipeline.py  sample.py
text_folder/: ai_text.txt  example.txt  human_text.txt  test_ai.txt  test_human.txt  whisper_example_text.txt
