[project]
name = "audio-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==2.19.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "matplotlib>=3.10.7",
    "librosa>=0.11.0",
]
